--- a/android/key.properties
+++ b/android/key.properties
@@ -1,4 +1,4 @@
-storePassword=123456
-keyPassword=123456
-keyAlias=key
-storeFile=/Users/fiazluthfi/Documents/key.jks
+storePassword=android
+keyPassword=android
+keyAlias=androiddebugkey
+storeFile=Users\android\Desktop\freelance\Quran\Quran_turkish\debug.keystore
