--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,9 +30,10 @@ dependencies:
   permission_handler: ^3.2.2
   http: ^0.12.0+2
   geolocator: ^5.1.3
-  firebase_admob: ^0.9.3+2
+  # firebase_admob: ^0.9.3+2
 
 dev_dependencies:
+  flutter_launcher_icons: "^0.7.3"
   flutter_test:
     sdk: flutter
 
