--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,7 @@ dependencies:
   pk_skeleton: ^0.0.2
   package_info: ^0.4.0+6
   flutter_compass: ^0.3.2
-  permission_handler: ^3.2.2
+  permission_handler: ^5.0.0+hotfix.8
   http: ^0.12.0+2
   geolocator: ^5.1.3
   # firebase_admob: ^0.9.3+2
